[project]
name = "smlmlp"
version = "0.1.17"
description = "A python library for Single Molecule Localization Microscopy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "Bottleneck", "arrlp", "corelp", "funclp", "numpy", "opencv-python", "pandas", "stacklp", "tifffile",]

[build-system]
requires = [ "uv_build",]
build-backend = "uv_build"

[dependency-groups]
tests = [ "pytest",]
docs = [ "sphinx", "sphinx-design", "sphinx-rtd-theme", "toml",]
anaconda = [ "ipykernel", "spyder-kernels",]

[project.optional-dependencies]
cuda12 = [ "arrlp[cuda12]", "stacklp[cuda12]", "funclp[cuda12]",]
cuda13 = [ "arrlp[cuda13]", "stacklp[cuda13]", "funclp[cuda13]",]
docs = [ "sphinx", "sphinx-design", "sphinx-rtd-theme", "toml",]

[tool.uv]
required-environments = [ "sys_platform == 'linux' and platform_machine == 'x86_64'", "sys_platform == 'win32' and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",]

[tool.uv.sources.arrlp]
workspace = true

[tool.uv.sources.corelp]
workspace = true

[tool.uv.sources.funclp]
workspace = true

[tool.uv.sources.stacklp]
workspace = true
